--- a/writeup_worksheet.ipynb
+++ b/writeup_worksheet.ipynb
@@ -312,10 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### 3. Describe how (and identify where in your code) you performed a perspective transform and provide an example of a transformed image.\n",
     "\n",
@@ -345,8 +342,123 @@
     "\n",
     "I verified that my perspective transform was working as expected by drawing the `src` and `dst` points onto a test image and its warped counterpart to verify that the lines appear parallel in the warped image.\n",
     "\n",
-    "![alt text][image4]\n",
+    "![alt text][image4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# %load warper.py\n",
+    "import pickle\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
     "\n",
+    "# Read in the saved camera matrix and distortion coefficients\n",
+    "# These are the arrays you calculated using cv2.calibrateCamera()\n",
+    "dist_pickle = pickle.load( open( \"./output_images/calibration.p\", \"rb\" ) )\n",
+    "mtx = dist_pickle[\"mtx\"]\n",
+    "dist = dist_pickle[\"dist\"]\n",
+    "\n",
+    "# Read in an image\n",
+    "img = cv2.imread('./camera_cal/calibration13.jpg')\n",
+    "img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "nx = 9 # the number of inside corners in x\n",
+    "ny = 6 # the number of inside corners in y\n",
+    "\n",
+    "# MODIFY THIS FUNCTION TO GENERATE OUTPUT\n",
+    "# THAT LOOKS LIKE THE IMAGE ABOVE\n",
+    "def corners_unwarp(img, nx, ny, mtx, dist):\n",
+    "    # Use the OpenCV undistort() function to remove distortion\n",
+    "    undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
+    "    # Convert undistorted image to grayscale\n",
+    "    gray = cv2.cvtColor(undist, cv2.COLOR_RGB2GRAY)\n",
+    "    # Search for corners in the grayscaled image\n",
+    "    ret, corners = cv2.findChessboardCorners(gray, (nx, ny), None)\n",
+    "\n",
+    "    if ret == True:\n",
+    "        # If we found corners, draw them! (just for fun)\n",
+    "        cv2.drawChessboardCorners(undist, (nx, ny), corners, ret)\n",
+    "        # Choose offset from image corners to plot detected corners\n",
+    "        # This should be chosen to present the result at the proper aspect ratio\n",
+    "        # My choice of 100 pixels is not exact, but close enough for our purpose here\n",
+    "        offset = 50 # offset for dst points\n",
+    "        # Grab the image shape\n",
+    "        img_size = (gray.shape[1], gray.shape[0])\n",
+    "\n",
+    "        # Grab the outer four detected corners\n",
+    "        src = np.float32([ [375, 303], [666, 57 ], [785, 355], [435, 575] ])\n",
+    "        # For destination points, I'm arbitrarily choosing some points to be\n",
+    "        # a nice fit for displaying our warped result\n",
+    "        # again, not exact, but close enough for our purposes\n",
+    "\n",
+    "        dst = np.float32([[offset, offset], [img_size[0]-offset, offset],\n",
+    "                                     [img_size[0]-offset, img_size[1]-offset],\n",
+    "                                     [offset, img_size[1]-offset]])\n",
+    "\n",
+    "        # Given src and dst points, calculate the perspective transform matrix\n",
+    "        M = cv2.getPerspectiveTransform(src, dst)\n",
+    "        # Warp the image using OpenCV warpPerspective()\n",
+    "        warped = cv2.warpPerspective(undist, M, img_size)\n",
+    "\n",
+    "    # Return the resulting image and matrix\n",
+    "    return warped, M\n",
+    "\n",
+    "top_down, perspective_M = corners_unwarp(img, nx, ny, mtx, dist)\n",
+    "cv2.imwrite('test_out/test_top_down.jpg', top_down)\n",
+    "\n",
+    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "f.tight_layout()\n",
+    "ax1.imshow(img)\n",
+    "ax1.set_title('Original Image', fontsize=50)\n",
+    "ax2.imshow(top_down)\n",
+    "ax2.set_title('Undistorted and Warped Image', fontsize=50)\n",
+    "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "from glob import iglob\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "img = mpimg.imread('./camera_cal/calibration13.jpg')\n",
+    "plt.imshow(img)\n",
+    "plt.plot(375, 303, '*')\n",
+    "plt.plot(666, 57, '*')\n",
+    "plt.plot(785, 355, '*')\n",
+    "plt.plot(435, 575, '*')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "#### 4. Describe how (and identify where in your code) you identified lane-line pixels and fit their positions with a polynomial?\n",
     "\n",
     "Then I did some other stuff and fit my lane lines with a 2nd order polynomial kinda like this:\n",
