Added cells to identify lane-line pixels

--- a/writeup_worksheet.ipynb
+++ b/writeup_worksheet.ipynb
@@ -232,7 +232,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Sobel Operator"
    ]
@@ -361,7 +364,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Magnitude of the Gradient"
    ]
@@ -464,12 +470,12 @@
     "# a = None\n",
     "# b = None\n",
     "# o = 'x'\n",
-    "#\n",
+    "\n",
     "# interact(set_orient, p='x')\n",
     "# interact(set_min, n=(0, 255))\n",
     "# interact(set_max, x=(0, 255))\n",
     "\n",
-    "# Test Magnitude Threshold\n",
+    "# # Test Magnitude Threshold\n",
     "mag_binary = mag_thresh(img, sobel_kernel=3, mag_thresh=(30, 100))\n",
     "# Plot the result\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
@@ -483,7 +489,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Direction of the Gradient"
    ]
@@ -492,7 +501,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -538,7 +549,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Color Threshold"
    ]
@@ -547,7 +561,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -563,8 +579,6 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
-    "\n",
-    "image = mpimg.imread('./test_images/test5.jpg')\n",
     "\n",
     "# Edit this function to create your own pipeline.\n",
     "def pipeline(img, s_thresh=(170, 255), sx_thresh=(20, 100)):\n",
@@ -589,19 +603,35 @@
     "    # Note color_binary[:, :, 0] is all 0s, effectively an all black image. It might\n",
     "    # be beneficial to replace this channel with something else.\n",
     "    color_binary = np.dstack(( np.zeros_like(sxbinary), sxbinary, s_binary))\n",
-    "    return color_binary\n",
+    "\n",
+    "    # Combine the two binary thresholds\n",
+    "    combined_binary = np.zeros_like(sxbinary)\n",
+    "    combined_binary[(s_binary == 1) | (sxbinary == 1)] = 1\n",
+    "\n",
+    "    return color_binary, combined_binary\n",
     "    \n",
-    "result = pipeline(image)\n",
+    "\n",
+    "calibration = get_calibration_data()\n",
+    "matrix = calibration['mtx']\n",
+    "distortion_coefficients = calibration['dist']\n",
+    "\n",
+    "image = mpimg.imread('./test_images/test5.jpg')\n",
+    "undistorted = undistort_image(image, matrix, distortion_coefficients)\n",
+    "color_binary, combined_binary = pipeline(undistorted)\n",
     "\n",
     "# Plot the result\n",
-    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "f, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(24, 9))\n",
     "f.tight_layout()\n",
     "\n",
     "ax1.imshow(image)\n",
-    "ax1.set_title('Original Image', fontsize=40)\n",
+    "ax1.set_title('Original Image', fontsize=24)\n",
     "\n",
-    "ax2.imshow(result)\n",
-    "ax2.set_title('Pipeline Result', fontsize=40)\n",
+    "ax2.imshow(color_binary)\n",
+    "ax2.set_title('Pipeline Result [Color binary]', fontsize=24)\n",
+    "\n",
+    "ax3.imshow(combined_binary, cmap='gray')\n",
+    "ax3.set_title('Pipeline Result [Combined binary]', fontsize=24)\n",
+    "\n",
     "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)\n",
     "\n",
     "\n",
@@ -633,6 +663,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -650,7 +682,7 @@
     "p3 = (700, top)\n",
     "p4 = (1060, bottom)\n",
     "\n",
-    "images = glob('./test_images/*.jpg')\n",
+    "images = glob('./test_images/straight_lines*.jpg')\n",
     "\n",
     "COLUMNS = 1\n",
     "rows = math.ceil(len(images) / COLUMNS)\n",
@@ -830,7 +862,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -855,8 +889,8 @@
     "    [left_bottom[0], left_bottom[1]]\n",
     "])\n",
     "\n",
-    "dst_left = 350\n",
-    "dst_right = 930\n",
+    "dst_left = 320\n",
+    "dst_right = 960\n",
     "dst = np.float32([\n",
     "    [dst_left, 0],\n",
     "    [dst_right, 0],\n",
@@ -879,30 +913,31 @@
     "\n",
     "matrix = cv2.getPerspectiveTransform(src, dst)\n",
     "warped = cv2.warpPerspective(img, matrix, img_size)\n",
-    "cv2.line(warped, (dst_left, 0), (dst_left, 720), LINE_COLOR, LINE_THICKNESS)\n",
-    "cv2.line(warped, (dst_right, 0), (dst_right, 720), LINE_COLOR, LINE_THICKNESS)\n",
+    "warped_lines = np.copy(warped)\n",
+    "cv2.line(warped_lines, (dst_left, 0), (dst_left, 720), LINE_COLOR, LINE_THICKNESS)\n",
+    "cv2.line(warped_lines, (dst_right, 0), (dst_right, 720), LINE_COLOR, LINE_THICKNESS)\n",
     "\n",
     "plt.figure(figsize=(24, 15))\n",
     "# f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
     "# plt.tight_layout()\n",
-    "plt.subplot(221)\n",
+    "plt.subplot(321)\n",
     "plt.title('Original Image', fontsize=24)\n",
     "plt.imshow(orig_img)\n",
     "\n",
-    "plt.subplot(222)\n",
+    "plt.subplot(322)\n",
     "plt.title('Undistorted', fontsize=24)\n",
     "plt.imshow(img)\n",
     "# ax3.imshow(threshed, cmap='gray')\n",
     "# ax3.set_title('Thresholded Gradient [Sobel]', fontsize=24)\n",
     "# plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)\n",
     "\n",
-    "plt.subplot(223)\n",
+    "plt.subplot(323)\n",
     "plt.title('Region of Interest', fontsize=24)\n",
     "plt.imshow(img_copy)\n",
     "\n",
-    "plt.subplot(224)\n",
+    "plt.subplot(324)\n",
     "plt.title('Warped', fontsize=24)\n",
-    "plt.imshow(warped)\n"
+    "plt.imshow(warped_lines)\n"
    ]
   },
   {
@@ -916,12 +951,130 @@
     "\n",
     "Then I did some other stuff and fit my lane lines with a 2nd order polynomial kinda like this:\n",
     "\n",
-    "![alt text][image5]\n",
+    "![alt text][image5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
+    "combined_binary_img_size = (combined_binary.shape[1], combined_binary.shape[0])\n",
+    "matrix = cv2.getPerspectiveTransform(src, dst)\n",
+    "binary_warped = cv2.warpPerspective(combined_binary, matrix, img_size)\n",
+    "\n",
+    "\n",
+    "# Assuming you have created a warped binary image called \"binary_warped\"\n",
+    "# Take a histogram of the bottom half of the image\n",
+    "histogram = np.sum(binary_warped[binary_warped.shape[0]//2:,:], axis=0)\n",
+    "# Create an output image to draw on and  visualize the result\n",
+    "out_img = np.dstack((binary_warped, binary_warped, binary_warped))*255\n",
+    "# Find the peak of the left and right halves of the histogram\n",
+    "# These will be the starting point for the left and right lines\n",
+    "midpoint = np.int(histogram.shape[0]/2)\n",
+    "leftx_base = np.argmax(histogram[:midpoint])\n",
+    "rightx_base = np.argmax(histogram[midpoint:]) + midpoint\n",
+    "\n",
+    "# Choose the number of sliding windows\n",
+    "nwindows = 9\n",
+    "# Set height of windows\n",
+    "window_height = np.int(binary_warped.shape[0]/nwindows)\n",
+    "# Identify the x and y positions of all nonzero pixels in the image\n",
+    "nonzero = binary_warped.nonzero()\n",
+    "nonzeroy = np.array(nonzero[0])\n",
+    "nonzerox = np.array(nonzero[1])\n",
+    "# Current positions to be updated for each window\n",
+    "leftx_current = leftx_base\n",
+    "rightx_current = rightx_base\n",
+    "# Set the width of the windows +/- margin\n",
+    "margin = 100\n",
+    "# Set minimum number of pixels found to recenter window\n",
+    "minpix = 50\n",
+    "# Create empty lists to receive left and right lane pixel indices\n",
+    "left_lane_inds = []\n",
+    "right_lane_inds = []\n",
+    "\n",
+    "# Step through the windows one by one\n",
+    "for window in range(nwindows):\n",
+    "    # Identify window boundaries in x and y (and right and left)\n",
+    "    win_y_low = binary_warped.shape[0] - (window+1)*window_height\n",
+    "    win_y_high = binary_warped.shape[0] - window*window_height\n",
+    "    win_xleft_low = leftx_current - margin\n",
+    "    win_xleft_high = leftx_current + margin\n",
+    "    win_xright_low = rightx_current - margin\n",
+    "    win_xright_high = rightx_current + margin\n",
+    "    # Draw the windows on the visualization image\n",
+    "    cv2.rectangle(out_img,(win_xleft_low,win_y_low),(win_xleft_high,win_y_high),(0,255,0), 2) \n",
+    "    cv2.rectangle(out_img,(win_xright_low,win_y_low),(win_xright_high,win_y_high),(0,255,0), 2) \n",
+    "    # Identify the nonzero pixels in x and y within the window\n",
+    "    good_left_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & (nonzerox >= win_xleft_low) & (nonzerox < win_xleft_high)).nonzero()[0]\n",
+    "    good_right_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & (nonzerox >= win_xright_low) & (nonzerox < win_xright_high)).nonzero()[0]\n",
+    "    # Append these indices to the lists\n",
+    "    left_lane_inds.append(good_left_inds)\n",
+    "    right_lane_inds.append(good_right_inds)\n",
+    "    # If you found > minpix pixels, recenter next window on their mean position\n",
+    "    if len(good_left_inds) > minpix:\n",
+    "        leftx_current = np.int(np.mean(nonzerox[good_left_inds]))\n",
+    "    if len(good_right_inds) > minpix:        \n",
+    "        rightx_current = np.int(np.mean(nonzerox[good_right_inds]))\n",
+    "\n",
+    "# Concatenate the arrays of indices\n",
+    "left_lane_inds = np.concatenate(left_lane_inds)\n",
+    "right_lane_inds = np.concatenate(right_lane_inds)\n",
+    "\n",
+    "# Extract left and right line pixel positions\n",
+    "leftx = nonzerox[left_lane_inds]\n",
+    "lefty = nonzeroy[left_lane_inds] \n",
+    "rightx = nonzerox[right_lane_inds]\n",
+    "righty = nonzeroy[right_lane_inds] \n",
+    "\n",
+    "# Fit a second order polynomial to each\n",
+    "left_fit = np.polyfit(lefty, leftx, 2)\n",
+    "right_fit = np.polyfit(righty, rightx, 2)\n",
+    "\n",
+    "# Generate x and y values for plotting\n",
+    "ploty = np.linspace(0, binary_warped.shape[0]-1, binary_warped.shape[0] )\n",
+    "left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "\n",
+    "out_img[nonzeroy[left_lane_inds], nonzerox[left_lane_inds]] = [255, 0, 0]\n",
+    "out_img[nonzeroy[right_lane_inds], nonzerox[right_lane_inds]] = [0, 0, 255]\n",
+    "plt.imshow(out_img)\n",
+    "plt.plot(left_fitx, ploty, color='yellow')\n",
+    "plt.plot(right_fitx, ploty, color='yellow')\n",
+    "plt.xlim(0, 1280)\n",
+    "plt.ylim(720, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "#### 5. Describe how (and identify where in your code) you calculated the radius of curvature of the lane and the position of the vehicle with respect to center.\n",
     "\n",
-    "I did this in lines # through # in my code in `my_other_file.py`\n",
-    "\n",
+    "I did this in lines # through # in my code in `my_other_file.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "#### 6. Provide an example image of your result plotted back down onto the road such that the lane area is identified clearly.\n",
     "\n",
     "I implemented this step in lines # through # in my code in `yet_another_file.py` in the function `map_lane()`.  Here is an example of my result on a test image:\n",
@@ -982,212 +1135,164 @@
   },
   "widgets": {
    "state": {
-    "07fe8a09787d4648890b298918a1f90e": {
+    "07ff8b4f379144cca67980402a0c288c": {
      "views": []
     },
-    "0f1d313c4bfa41ab8c12086fde7da34c": {
+    "17ac8b19eccf4f699e5399b44dff1e70": {
      "views": []
     },
-    "1c1caebb2193430cbcef3d6a27943e14": {
+    "1c62c99194194dd182e544959794bdc9": {
      "views": []
     },
-    "240cb12b5ff84b46bb1c71994f57b7dc": {
+    "229133578a16445098ad1c4a407d5853": {
      "views": []
     },
-    "282e58212b4e41a29963149619163f8a": {
+    "3198ee1ab10941b78f2d30bc6fc82d4f": {
      "views": []
     },
-    "2a243c4b101142e0a9fc88b63b8ec47c": {
+    "35a125fb124d4cf0a57c3ddccc4d3888": {
      "views": []
     },
-    "2c61b4e1a47a4da395184f9421f9677f": {
+    "3903dba4aefa4cbb9a8ef25df30e1a32": {
      "views": []
     },
-    "2f34faa560c644ecba59f79e1052a73e": {
+    "43aec95b2992453a9d27895213b735b2": {
      "views": []
     },
-    "2f42cbe5d3b64c168137f71fb123653f": {
+    "46efde630a364759a7f6e7db50edd9e3": {
      "views": []
     },
-    "350895d241794f40ac32178f5882badc": {
+    "47f50ef140d0415bb807c906c5765a82": {
      "views": []
     },
-    "37a4c1cc7571430b99588f3840f5d4ed": {
+    "484911edefab48db99f8aeb532604ad7": {
      "views": []
     },
-    "3aa62aa532d94743a7cf8a95872b5f2d": {
+    "484cfc5aee82466d9489d194dbb89ab4": {
      "views": []
     },
-    "3bd508a6050e4ef89175cbea8e83c67a": {
+    "4d8e887131fe44ed9fe154339a3b884d": {
      "views": []
     },
-    "3e23bc8a4a5c4c22988480925a468cfe": {
+    "56d09d908be04cdab2557abec82b5e9b": {
+     "views": []
+    },
+    "5c52f696cc254167901682ec0ed853f7": {
+     "views": []
+    },
+    "64e789df094c43aeb6de19e7b03a1b1c": {
+     "views": []
+    },
+    "661e3633e1004646b0a519a2fe3bf7a4": {
+     "views": []
+    },
+    "71a118a4358642f5af59f98f340fb1af": {
+     "views": []
+    },
+    "7a9ca4c239364a088d19a99cf212742b": {
+     "views": []
+    },
+    "7b7b3d4289744b249afd13c46e77ab96": {
+     "views": []
+    },
+    "7c27aff3e28449c5a721daf570145feb": {
+     "views": []
+    },
+    "85097096550740df81f105dc6904373e": {
+     "views": []
+    },
+    "8b31d698e1044818b8f499333b7a29b1": {
      "views": [
       {
        "cell_index": 8
       }
      ]
     },
-    "4325bcd8ab2346a7a78fde6a1faff5e4": {
+    "90ea1f893c554fd198d67792bd1a9e02": {
      "views": []
     },
-    "483d7f9853b246f2b20bf6e4a0d066f0": {
+    "937e567c0e95435bb4f67d2d13c86168": {
+     "views": []
+    },
+    "958a185e6f5d478dacf89c7cf7c75379": {
      "views": [
       {
        "cell_index": 8
       }
      ]
     },
-    "4ab58ab5baef449cb5dd5a1a99143bd8": {
+    "9c22ce9df3fb45dd9cafc3585b224f79": {
      "views": []
     },
-    "576df7e33f2242efa5fc3ec286dc900c": {
+    "a78ad96d38b94fe998cfb71d813242f9": {
      "views": []
     },
-    "590d8a75c8834b35a55af1caa146a77f": {
-     "views": []
-    },
-    "5f6336f07e8f458bad31a026b8f7c45a": {
-     "views": []
-    },
-    "619ad0e6324d4b4a876a17944d0bb0e7": {
-     "views": []
-    },
-    "66a68f6910054801b5b49a56b302fa50": {
+    "ae2950a3b5f849c7a52c958ec61c8119": {
      "views": [
       {
-       "cell_index": 6
+       "cell_index": 10
       }
      ]
     },
-    "688f63fb3647452caa8e9404e0ebd2ac": {
+    "ae6d8dfca6ae4427b22f978e6d856490": {
      "views": []
     },
-    "69cf3f0d6b93455ba33a735a57fa1d01": {
-     "views": [
-      {
-       "cell_index": 8
-      }
-     ]
-    },
-    "6c6be566684c40f5a531a55ba0ad047c": {
+    "aec3c30b5c044ef5995c5b3012f834d8": {
      "views": []
     },
-    "6d5aa9a2bf6e49e1925d36d5323d256e": {
+    "b291f79d5ea843dfba7e1f429365487b": {
+     "views": []
+    },
+    "baa2999d21d34cb8b5b9a53f5d43d727": {
+     "views": []
+    },
+    "bc8ae21781fc48f4872ef656f1174378": {
      "views": [
       {
        "cell_index": 8
       }
      ]
     },
-    "7172a4ab844a474eb0adb3421f54da9e": {
+    "bd88c9fcffd7489cbf8dad4a0cda5fd9": {
      "views": []
     },
-    "78b602b2cfcd4520b96aa40b00acac40": {
+    "d0432d2d8018436499e2347a3be370c3": {
      "views": []
     },
-    "81ec2c52ec314b368b24f72602434e1a": {
+    "d5cff76c11c14c36b372facef9107de5": {
      "views": []
     },
-    "83470d6c0f0040efbf354d69e18ac999": {
+    "dbec7ed1a30e410d953eba4f75d09ca5": {
      "views": []
     },
-    "87197ddf6a414ead941536402830a6c8": {
+    "df8510d3f10840ad9d7f1ada6e14f327": {
      "views": []
     },
-    "8877b5e3893c4216aed2751fbbd19672": {
+    "df947a360b464d68ace88853cdbd83c0": {
      "views": []
     },
-    "90d209d51d104a79b63f9bc84516b75e": {
+    "e87e5e8de5254840adf7680842305077": {
      "views": []
     },
-    "9345b7e6c3db45da8a651d44de77b1b7": {
+    "e8896b769b934536aa3b0d7383976143": {
      "views": []
     },
-    "9359c393ba89471bb24659808b7204e4": {
+    "ea5a74631c5845d1a5c9af003d3d33ef": {
      "views": []
     },
-    "93ec7c67238b42f8988d052a09ba6c63": {
+    "f6ac2eb7895641cdbb55f48f23e4e2b7": {
      "views": []
     },
-    "9fe63722e9ba4f2683ba8287c2aa7e97": {
+    "f744412b2c3b436ea3ec3120b02b8a79": {
      "views": []
     },
-    "a1c9468405174d3caf79bdfba2db7187": {
+    "fa583178240843b0bcdc4469d33616e8": {
      "views": []
     },
-    "a938e17138264d849c886178c0d3fb4e": {
-     "views": [
-      {
-       "cell_index": 8
-      }
-     ]
-    },
-    "aab9e56a89ef4938bd1780e36d0d5b2f": {
+    "fa84758519a94640ada9ebf882197083": {
      "views": []
     },
-    "b6c108b89cc94e31b469320fbb83b552": {
-     "views": []
-    },
-    "b8e4e754ac2f496499736b72b1e42cbb": {
-     "views": []
-    },
-    "bf3e4c8d075f45a9a689b2a60296810f": {
-     "views": []
-    },
-    "c03e6f59d6344012a456ce2049e57c5f": {
-     "views": []
-    },
-    "c0a065ae5738491db75d116d45b7b2f5": {
-     "views": []
-    },
-    "c192f58af7764c1a8d86a51512125f6f": {
-     "views": [
-      {
-       "cell_index": 8
-      }
-     ]
-    },
-    "cdace9b6d69e464497269448f6b1a57d": {
-     "views": []
-    },
-    "ce19257e56be48df9b572989e12b1dcf": {
-     "views": []
-    },
-    "ceee53eac1a64692806fde7a8051d518": {
-     "views": []
-    },
-    "d0f76743bd7943b1ab1edd2f19a1efe7": {
-     "views": []
-    },
-    "d24e4a66204e49a985de981adc58813e": {
-     "views": []
-    },
-    "d55c4009219e4be2b0ad9454d8d139e3": {
-     "views": []
-    },
-    "d8c01ed0d0f84bc8a41f8e72ddd407e1": {
-     "views": []
-    },
-    "da6ca3d1beff411da9110781aaa43232": {
-     "views": []
-    },
-    "e9a0e10ab9e346bd8ca6443bdf2d8ba3": {
-     "views": []
-    },
-    "ec8f00eb3f444b149ee959ace4d04ccb": {
-     "views": []
-    },
-    "ef1f767115ad4ccc80f738bd8dbdeac8": {
-     "views": []
-    },
-    "f6b02c2bca274617afda20beb9a00767": {
-     "views": []
-    },
-    "f8145f9c7b8b481b919f09117119f0f0": {
-     "views": []
-    },
-    "fdf3fdbbf597421c911dfb3b76e564af": {
+    "fb65428fac0d406995efabd78f437b6c": {
      "views": []
     }
    },
