Added code to draw lane overlay

--- a/writeup_worksheet.ipynb
+++ b/writeup_worksheet.ipynb
@@ -958,9 +958,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -977,6 +975,24 @@
     "# Assuming you have created a warped binary image called \"binary_warped\"\n",
     "# Take a histogram of the bottom half of the image\n",
     "histogram = np.sum(binary_warped[binary_warped.shape[0]//2:,:], axis=0)\n",
+    "\n",
+    "plt.figure(figsize=(5,5))\n",
+    "plt.subplot(211)\n",
+    "plt.imshow(binary_warped, cmap='gray')\n",
+    "plt.subplot(212)\n",
+    "plt.plot(histogram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "# Create an output image to draw on and  visualize the result\n",
     "out_img = np.dstack((binary_warped, binary_warped, binary_warped))*255\n",
     "# Find the peak of the left and right halves of the histogram\n",
@@ -1049,11 +1065,12 @@
     "\n",
     "out_img[nonzeroy[left_lane_inds], nonzerox[left_lane_inds]] = [255, 0, 0]\n",
     "out_img[nonzeroy[right_lane_inds], nonzerox[right_lane_inds]] = [0, 0, 255]\n",
+    "plt.figure(figsize=(9,9))\n",
     "plt.imshow(out_img)\n",
     "plt.plot(left_fitx, ploty, color='yellow')\n",
     "plt.plot(right_fitx, ploty, color='yellow')\n",
     "plt.xlim(0, 1280)\n",
-    "plt.ylim(720, 0)"
+    "plt.ylim(720, 0);"
    ]
   },
   {
@@ -1066,6 +1083,119 @@
     "#### 5. Describe how (and identify where in your code) you calculated the radius of curvature of the lane and the position of the vehicle with respect to center.\n",
     "\n",
     "I did this in lines # through # in my code in `my_other_file.py`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Generate some fake data to represent lane-line pixels\n",
+    "# ploty = np.linspace(0, 719, num=720)# to cover same y-range as image\n",
+    "# quadratic_coeff = 3e-4 # arbitrary quadratic coefficient\n",
+    "# For each y position generate random x position within +/-50 pix\n",
+    "# of the line base position in each case (x=200 for left, and x=900 for right)\n",
+    "# leftx = np.array([200 + (y**2)*quadratic_coeff + np.random.randint(-50, high=51) \n",
+    "#                               for y in ploty])\n",
+    "# rightx = np.array([900 + (y**2)*quadratic_coeff + np.random.randint(-50, high=51) \n",
+    "#                                 for y in ploty])\n",
+    "\n",
+    "# leftx = leftx[::-1]  # Reverse to match top-to-bottom in y\n",
+    "# rightx = rightx[::-1]  # Reverse to match top-to-bottom in y\n",
+    "\n",
+    "\n",
+    "# # Fit a second order polynomial to pixel positions in each fake lane line\n",
+    "# left_fit = np.polyfit(ploty, leftx, 2)\n",
+    "# left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "# right_fit = np.polyfit(ploty, rightx, 2)\n",
+    "# right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "\n",
+    "# # Plot up the fake data\n",
+    "mark_size = 3\n",
+    "plt.plot(leftx, lefty, 'o', color='red', markersize=mark_size)\n",
+    "plt.plot(rightx, righty, 'o', color='blue', markersize=mark_size)\n",
+    "plt.xlim(0, 1280)\n",
+    "plt.ylim(0, 720)\n",
+    "plt.plot(left_fitx, ploty, color='green', linewidth=3)\n",
+    "plt.plot(right_fitx, ploty, color='green', linewidth=3)\n",
+    "plt.gca().invert_yaxis() # to visualize as we do the images\n",
+    "\n",
+    "# Define y-value where we want radius of curvature\n",
+    "# I'll choose the maximum y-value, corresponding to the bottom of the image\n",
+    "y_eval = np.max(ploty)\n",
+    "left_curverad = ((1 + (2*left_fit[0]*y_eval + left_fit[1])**2)**1.5) / np.absolute(2*left_fit[0])\n",
+    "right_curverad = ((1 + (2*right_fit[0]*y_eval + right_fit[1])**2)**1.5) / np.absolute(2*right_fit[0])\n",
+    "print(left_curverad, right_curverad)\n",
+    "# Example values: 1926.74 1908.48\n",
+    "\n",
+    "# Define conversions in x and y from pixels space to meters\n",
+    "ym_per_pix = 30/720 # meters per pixel in y dimension\n",
+    "xm_per_pix = 3.7/700 # meters per pixel in x dimension\n",
+    "\n",
+    "# Fit new polynomials to x,y in world space\n",
+    "left_fit_cr = np.polyfit(lefty*ym_per_pix, leftx*xm_per_pix, 2)\n",
+    "right_fit_cr = np.polyfit(righty*ym_per_pix, rightx*xm_per_pix, 2)\n",
+    "\n",
+    "# Calculate the new radii of curvature\n",
+    "left_curverad = ((1 + (2*left_fit_cr[0]*y_eval*ym_per_pix + left_fit_cr[1])**2)**1.5) / np.absolute(2*left_fit_cr[0])\n",
+    "right_curverad = ((1 + (2*right_fit_cr[0]*y_eval*ym_per_pix + right_fit_cr[1])**2)**1.5) / np.absolute(2*right_fit_cr[0])\n",
+    "\n",
+    "# Now our radius of curvature is in meters\n",
+    "print(left_curverad, 'm', right_curverad, 'm')\n",
+    "# Example values: 632.1 m    626.2 m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Create an image to draw the lines on\n",
+    "warp_zero = np.zeros_like(binary_warped).astype(np.uint8)\n",
+    "color_warp = np.dstack((warp_zero, warp_zero, warp_zero))\n",
+    "\n",
+    "# Recast the x and y points into usable format for cv2.fillPoly()\n",
+    "pts_left = np.array([np.transpose(np.vstack([left_fitx, ploty]))])\n",
+    "pts_right = np.array([np.flipud(np.transpose(np.vstack([right_fitx, ploty])))])\n",
+    "pts = np.hstack((pts_left, pts_right))\n",
+    "\n",
+    "# Draw the lane onto the warped blank image\n",
+    "cv2.fillPoly(color_warp, np.int_([pts]), (255, 255, 0))\n",
+    "cv2.putText(\n",
+    "    undistorted,\n",
+    "    'Curvature Radius = 651m',\n",
+    "    (50, 100),\n",
+    "    0,\n",
+    "    2,\n",
+    "    (255, 255, 0),\n",
+    "    2,\n",
+    "    cv2.LINE_AA\n",
+    ")\n",
+    "cv2.putText(\n",
+    "    undistorted,\n",
+    "    'Vehicle is {}m {} of center'.format(0.5, 'left'),\n",
+    "    (50, 160),\n",
+    "    cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "    2,\n",
+    "    (255, 255, 0),\n",
+    "    2,\n",
+    "    cv2.LINE_AA\n",
+    ")\n",
+    "\n",
+    "# Warp the blank back to original image space using inverse perspective matrix (Minv)\n",
+    "matrix_inverse = cv2.getPerspectiveTransform(dst, src)\n",
+    "newwarp = cv2.warpPerspective(color_warp, matrix_inverse, combined_binary_img_size) \n",
+    "# Combine the result with the original image\n",
+    "result = cv2.addWeighted(undistorted, 1, newwarp, 0.3, 0)\n",
+    "plt.figure(figsize=(15, 9))\n",
+    "plt.imshow(result)\n"
    ]
   },
   {
@@ -1138,23 +1268,77 @@
     "07ff8b4f379144cca67980402a0c288c": {
      "views": []
     },
+    "097bc704d03e462e81efb007541cf17e": {
+     "views": []
+    },
+    "09980509eaf34c22a55d99eb13489b75": {
+     "views": [
+      {
+       "cell_index": 8
+      }
+     ]
+    },
+    "0be3cae926034939941eec1f1a6e56ec": {
+     "views": []
+    },
+    "0c8a33c9e5674460a1c71bd9c85f33a9": {
+     "views": []
+    },
+    "11e35020b3024f2fb6935222b9d9a9c3": {
+     "views": []
+    },
+    "16f5b7226f104dfbba56ce33113a657c": {
+     "views": []
+    },
     "17ac8b19eccf4f699e5399b44dff1e70": {
+     "views": []
+    },
+    "1a9ba80e03a3465e9084e66b8d463a67": {
      "views": []
     },
     "1c62c99194194dd182e544959794bdc9": {
      "views": []
     },
+    "1e662ecf451743c885c596142100a04c": {
+     "views": []
+    },
+    "21a87084319a4add813ab00b3a04f036": {
+     "views": []
+    },
     "229133578a16445098ad1c4a407d5853": {
+     "views": []
+    },
+    "24d022234a05475281db7828b38df921": {
+     "views": []
+    },
+    "304f6cc08535498b8111735f2d444624": {
      "views": []
     },
     "3198ee1ab10941b78f2d30bc6fc82d4f": {
      "views": []
     },
+    "333f35891a7a4542a84d0c19b53015a7": {
+     "views": []
+    },
     "35a125fb124d4cf0a57c3ddccc4d3888": {
      "views": []
     },
+    "363c6c5e97d64f8c8136c144cb16ae6c": {
+     "views": [
+      {
+       "cell_index": 8
+      }
+     ]
+    },
     "3903dba4aefa4cbb9a8ef25df30e1a32": {
      "views": []
+    },
+    "3f45adb5e3c04288bf8c250e43c35a12": {
+     "views": [
+      {
+       "cell_index": 8
+      }
+     ]
     },
     "43aec95b2992453a9d27895213b735b2": {
      "views": []
@@ -1171,7 +1355,26 @@
     "484cfc5aee82466d9489d194dbb89ab4": {
      "views": []
     },
+    "49dd3e90d6bb4eef9db5dfa689606645": {
+     "views": [
+      {
+       "cell_index": 8
+      }
+     ]
+    },
     "4d8e887131fe44ed9fe154339a3b884d": {
+     "views": []
+    },
+    "4f302b3fd92848bdabeb91aed100d2a4": {
+     "views": []
+    },
+    "51c1ac0cd9a84555b19ec4a106744721": {
+     "views": []
+    },
+    "522c4400a8b54de59f0af50c0a820b26": {
+     "views": []
+    },
+    "5305bbd53fff48678acb8cc091573b6e": {
      "views": []
     },
     "56d09d908be04cdab2557abec82b5e9b": {
@@ -1180,6 +1383,13 @@
     "5c52f696cc254167901682ec0ed853f7": {
      "views": []
     },
+    "5c82e93b21be445cb46cd2208f0820a6": {
+     "views": [
+      {
+       "cell_index": 8
+      }
+     ]
+    },
     "64e789df094c43aeb6de19e7b03a1b1c": {
      "views": []
     },
@@ -1187,6 +1397,9 @@
      "views": []
     },
     "71a118a4358642f5af59f98f340fb1af": {
+     "views": []
+    },
+    "7a887fb06af74e99b0bc03df99f5bb6f": {
      "views": []
     },
     "7a9ca4c239364a088d19a99cf212742b": {
@@ -1201,7 +1414,13 @@
     "85097096550740df81f105dc6904373e": {
      "views": []
     },
+    "894a3aec40a64e3c838bfbc81cb2ec58": {
+     "views": []
+    },
     "8b31d698e1044818b8f499333b7a29b1": {
+     "views": []
+    },
+    "8d0d784ce41142caa0f532f6efdf9874": {
      "views": [
       {
        "cell_index": 8
@@ -1224,7 +1443,13 @@
     "9c22ce9df3fb45dd9cafc3585b224f79": {
      "views": []
     },
+    "a1c289066ac142bc88b1a746e1d81e24": {
+     "views": []
+    },
     "a78ad96d38b94fe998cfb71d813242f9": {
+     "views": []
+    },
+    "ac3dc5bb4549474a9056134897b6e07f": {
      "views": []
     },
     "ae2950a3b5f849c7a52c958ec61c8119": {
@@ -1243,26 +1468,58 @@
     "b291f79d5ea843dfba7e1f429365487b": {
      "views": []
     },
+    "ba5332c7742b4316a2a22f98ee4b9fa3": {
+     "views": []
+    },
     "baa2999d21d34cb8b5b9a53f5d43d727": {
      "views": []
     },
     "bc8ae21781fc48f4872ef656f1174378": {
-     "views": [
-      {
-       "cell_index": 8
-      }
-     ]
+     "views": []
+    },
+    "bc91d15bc00842138885f183184b7a47": {
+     "views": []
     },
     "bd88c9fcffd7489cbf8dad4a0cda5fd9": {
+     "views": []
+    },
+    "bf352bd538a340ccbc7282bd8e7c9a4a": {
+     "views": []
+    },
+    "c37c9627eaae452fb397a0cbc9c2c8d4": {
+     "views": []
+    },
+    "c4506028a3214b8a9201e5133d12db3b": {
+     "views": []
+    },
+    "c77b362a803e4103bf0dccc1e503de27": {
      "views": []
     },
     "d0432d2d8018436499e2347a3be370c3": {
      "views": []
     },
+    "d3b80fb0eeb44865a0fcda4da3ca2f2d": {
+     "views": []
+    },
     "d5cff76c11c14c36b372facef9107de5": {
      "views": []
     },
+    "d5e3a3dfec43408dbbe79e2bd02c9c72": {
+     "views": []
+    },
+    "d5facfb68a3f437fb5036d34680465ae": {
+     "views": []
+    },
+    "d95b42e1b29f4892aef00e6acc0cc1e6": {
+     "views": []
+    },
+    "db010e89853f431bbc373592c9dd7b91": {
+     "views": []
+    },
     "dbec7ed1a30e410d953eba4f75d09ca5": {
+     "views": []
+    },
+    "df3e9fc9447142d5b35a8239d534bea4": {
      "views": []
     },
     "df8510d3f10840ad9d7f1ada6e14f327": {
@@ -1271,19 +1528,46 @@
     "df947a360b464d68ace88853cdbd83c0": {
      "views": []
     },
+    "e019155a50fa4189947b988296191e42": {
+     "views": []
+    },
+    "e0ec646320ec41e9b1bbe2e2d892ffdc": {
+     "views": []
+    },
+    "e66158c34b25476bb70cbac73033ef7d": {
+     "views": []
+    },
+    "e74462a697534c28bd9136929ba45e8b": {
+     "views": []
+    },
     "e87e5e8de5254840adf7680842305077": {
      "views": []
     },
     "e8896b769b934536aa3b0d7383976143": {
      "views": []
     },
+    "e9f8c3e855f84b73be22450e911ad9a1": {
+     "views": []
+    },
     "ea5a74631c5845d1a5c9af003d3d33ef": {
+     "views": []
+    },
+    "eeb456b20ceb4bd39252be6ed851a875": {
+     "views": []
+    },
+    "f4e006d3f10a49cdb2d720056e8cbcbe": {
      "views": []
     },
     "f6ac2eb7895641cdbb55f48f23e4e2b7": {
      "views": []
     },
+    "f6c574616dce48e69307843c01c63fa8": {
+     "views": []
+    },
     "f744412b2c3b436ea3ec3120b02b8a79": {
+     "views": []
+    },
+    "fa091f1746fe4717801068916e378806": {
      "views": []
     },
     "fa583178240843b0bcdc4469d33616e8": {
@@ -1293,6 +1577,12 @@
      "views": []
     },
     "fb65428fac0d406995efabd78f437b6c": {
+     "views": []
+    },
+    "fb715bd6774f40daa742c8fecc7c7637": {
+     "views": []
+    },
+    "fdc248bd8d0b4d4daf8abd19b3773508": {
      "views": []
     }
    },
